# openacc-samples

./: README.md
doc/parall_comput_slides/: .gitignore  .markdownlint.json  Makefile  dc_scan_example.dot  gbwt.dot  gpu.dot  host_accel.dot  multi-cpu.dot  parall_comput_slides.md  parall_diverse_tasks.dot  parall_similar_tasks.dot  sample_placement.dot  simd.dot  single-cpu.dot
enum_sort_acc/: .cproject  .project  CMakeLists.txt  enum_sort_acc.cpp  enum_sort_acc.hpp  main.cpp
intVectAdd/: .cproject  .project
intVectAdd/src/: vector_add.cu
prefix_sum_acc/: .cproject  .project  CMakeLists.txt  Makefile  main.cpp  prefix_sum_acc.cpp  prefix_sum_acc.hpp
prefix_sum_acc/src/: main.cpp  prefix_sum_acc.cpp  prefix_sum_acc.hpp
prefix_sum_cuda/: .cproject  .project
prefix_sum_cuda/src/: main.cu  prefix_sum_cuda.cu  prefix_sum_cuda.h
vect_add_acc/: .cproject  .project  CMakeLists.txt  main.cpp  vect_add_acc.cpp  vect_add_acc.hpp
vect_add_cuda/: .cproject  .project
vect_add_cuda/src/: vect_add_cuda.cu
